Fixed weird cut offs. Moved to less elegant, but more correct algorithm.
Added an alias array property so that <br /> and custom tags could be implemented. Self closing tags are easier now. A lot of it uses regex.

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,58 @@
 body {
   font-family: sans-serif;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+header {
+  margin-bottom: 40px;
+  margin-left: 40px;
+  width: 100%;
+}
+header h1 {
+  margin-bottom: 0px;
+}
+header p {
+  margin-top: 5px;
 }
 
 main {
   box-shadow: 2px 2px 5px 0 grey;
   border-radius: 10px;
-  padding: 5px;
+  padding: 20px;
+  min-width: 100px;
+  max-width: 300px;
   text-align: center;
+
+  animation: shake 3s infinite;
+  transition: 0.25s;
+}
+
+@keyframes shake {
+  0% {
+    transform: rotate(3deg);
+  }
+  50% {
+    transform: rotate(-3deg);
+  }
+  100% {
+    transform: rotate(3deg);
+  }
+}
+
+main h3 {
+  margin: 0;
+  padding-bottom: 10px;
+}
+
+main .shortcut {
+  font-size: 0.8em;
+  transition: 0.25s;
+}
+
+main:hover .shortcut {
+  font-size: 1em;
 }
